# Aurora

./: compose.yaml  package.json
api/: .gitignore  Cargo.toml
api/db/: seed.sql  table.sql  to_migration.sh
api/src/: app_config.rs  config.rs  lib.rs  main.rs  middleware.rs
api/src/controller/: auth.rs  contest.rs  health.rs  mod.rs  problem.rs  services.rs  submission.rs
api/src/domain/: contest.rs  mod.rs  problem.rs  submission.rs  user.rs
api/src/domain/value_object/: platform.rs
api/src/domain/vo/: category.rs  language.rs  mod.rs  phase.rs  platform.rs  providers.rs  technique_tag.rs  verdict.rs
api/src/infra/: mod.rs
api/src/infra/api/: api_client.rs  factory.rs  mod.rs
api/src/infra/api/aoj/: api_client.rs  convert.rs  external.rs  mod.rs  types.rs
api/src/infra/api/atcoder/: api_client.rs  classifier.rs  external.rs  types.rs
api/src/infra/api/cf/: api_client.rs  classifier.rs  external.rs  mod.rs  types.rs
api/src/infra/api/yoj/: mod.rs  (+4 more)
api/src/infra/oidc/: client.rs  mod.rs  providers.rs
api/src/infra/repository/: contest.rs  initialize_pool.rs  mod.rs  problem.rs  technical_tag.rs  user.rs
api/src/infrastracture/api/: mod.rs
api/src/service/: auth.rs  contest.rs  mod.rs  problem.rs  submission.rs  submission_usecase.rs  update.rs
api/src/service/update_problems/: aoj.rs  atcoder.rs  cf.rs  codeforces.rs  mod.rs  update_aoj_problems.rs  update_codeforces_problems.rs  update_yosupo_online_judge_problems.rs  update_yukicoder_problems.rs  yoj.rs  yuki.rs  yukicoder.rs
api/src/utils/: api.rs  cookie.rs  format.rs  jwt.rs  mod.rs
(+94 files in other folders)
