[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
async-trait = "0.1.80"
chrono = "0.4.38"
convert_case = "0.6.0"
dotenv = "0.15.0"
log = "0.4.21"
reqwest = {version = "0.12.4", features = ["json", "cookies","gzip"]}
scraper = "0.19.0"
serde = {version = "1.0.199", features = ["derive"]}
serde_json = "1.0.116"
tokio = {version = "1.37.0", features = ["full"]}
toml = "0.8.12"
url = "2.5.0"
