[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.7.0"
anyhow = "1.0.82"
async-trait = "0.1.80"
chrono = "0.4.38"
convert_case = "0.6.0"
dotenv = "0.15.0"
env_logger = "0.11.3"
jsonwebtoken = "9.3.0"
log = "0.4.21"
once_cell = "1.19.0"
openidconnect = "3.5.0"
regex = "1.10.4"
reqwest = {version = "0.12.4", features = ["json", "cookies","gzip"]}
scraper = "0.19.0"
serde = {version = "1.0.199", features = ["derive"]}
serde_json = "1.0.116"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-rustls"] }
sqlx-cli = "0.7.4"
tokio = {version = "1.37.0", features = ["full"]}
toml = "0.8.12"
trait-variant = "0.1.2"
url = "2.5.0"

[[bin]]
name = "batch_update"
path = "src/bin/batch_update.rs"
